--- a/apex-mdapi/src/package.xml
+++ b/apex-mdapi/src/package.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
+    <types>
+        <members>MetadataService</members>
+        <members>MetadataServiceExamples</members>
+        <name>ApexClass</name>
+    </types>
     <version>24.0</version>
 </Package>
