--- a/apex-mdapi/src/package.xml
+++ b/apex-mdapi/src/package.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
+        <members>MetadataDataController</members>
         <members>MetadataDeployController</members>
         <members>MetadataRetrieveController</members>
         <members>MetadataService</members>
