Initial in progress class to illustrate using Metadata API in Batch Apex

--- a/apex-mdapi/src/package.xml
+++ b/apex-mdapi/src/package.xml
@@ -3,6 +3,7 @@
     <types>
         <members>MetadataDataController</members>
         <members>MetadataDeployController</members>
+        <members>MetadataRetrieveBatchJob</members>
         <members>MetadataRetrieveController</members>
         <members>MetadataService</members>
         <members>MetadataServiceExamples</members>
