Upgraded to Metadata API 27.0 (Spring'13)

--- a/apex-mdapi/src/package.xml
+++ b/apex-mdapi/src/package.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>MetadataDataController</members>
@@ -12,6 +12,10 @@
     </types>
     <types>
         <members>*</members>
+        <name>ApexComponent</name>
+    </types>
+    <types>
+        <members>*</members>
         <name>ApexPage</name>
     </types>
     <types>
@@ -22,10 +26,5 @@
         <members>*</members>
         <name>StaticResource</name>
     </types>
-    <types>
-        <members>*</members>
-        <name>ApexComponent</name>
-    </types>
-    <version>24.0</version>
+    <version>27.0</version>
 </Package>
-
