--- a/apex-mdapi/src/package.xml
+++ b/apex-mdapi/src/package.xml
@@ -1,30 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>MetadataDataController</members>
-        <members>MetadataDeployController</members>
-        <members>MetadataRetrieveBatchJob</members>
-        <members>MetadataRetrieveController</members>
+        <members>MetadataCreateJob</members>
+        <members>MetadataCreateJobTest</members>
         <members>MetadataService</members>
-        <members>MetadataServiceExamples</members>
-        <members>MetadataServiceTest</members>
         <name>ApexClass</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>CustomTab</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>StaticResource</name>
     </types>
     <version>24.0</version>
 </Package>
