Test coverage for the generated MetadataService.cls (98%)
Not sure where the missing 2% is!

--- a/apex-mdapi/src/package.xml
+++ b/apex-mdapi/src/package.xml
@@ -4,6 +4,7 @@
         <members>MetadataCreateJob</members>
         <members>MetadataCreateJobTest</members>
         <members>MetadataService</members>
+        <members>MetadataServiceTest</members>
         <name>ApexClass</name>
     </types>
     <version>24.0</version>
