--- a/apex-mdapi/src/package.xml
+++ b/apex-mdapi/src/package.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>MetadataCreateJob</members>
-        <members>MetadataCreateJobTest</members>
-        <members>MetadataService</members>
-        <members>MetadataServiceTest</members>
+        <members>*</members>
         <name>ApexClass</name>
     </types>
     <version>24.0</version>
