Tweaks to API versions and package.xml

--- a/apex-mdapi/src/package.xml
+++ b/apex-mdapi/src/package.xml
@@ -4,5 +4,21 @@
         <members>*</members>
         <name>ApexClass</name>
     </types>
+    <types>
+        <members>*</members>
+        <name>ApexComponent</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>ApexPage</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>CustomTab</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>StaticResource</name>
+    </types>
     <version>24.0</version>
 </Package>
