Added new Visualforce actionPoller example as part of SE answer.
http://salesforce.stackexchange.com/questions/18843/using-meta-data-api-
in-apex/18857#18857

--- a/apex-mdapi/src/package.xml
+++ b/apex-mdapi/src/package.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
+        <members>MetadataController</members>
         <members>MetadataCreateJob</members>
         <members>MetadataCreateJobTest</members>
         <members>MetadataDataController</members>
@@ -18,6 +19,7 @@
         <name>ApexComponent</name>
     </types>
     <types>
+        <members>metadata</members>
         <members>metadatabrowser</members>
         <members>metadatadata</members>
         <members>metadatadeploy</members>
