--- a/apex-mdapi/src/package.xml
+++ b/apex-mdapi/src/package.xml
@@ -8,12 +8,14 @@
         <members>MetadataServiceExamples</members>
         <members>MetadataServicePatcher</members>
         <members>MetadataServiceTest</members>
+        <members>RemoteSiteHelperController</members>
         <name>ApexClass</name>
     </types>
     <types>
         <members>unzip</members>
         <members>zip</members>
         <members>zipEntry</members>
+        <members>remotesitehelper</members>
         <name>ApexComponent</name>
     </types>
     <types>
@@ -21,6 +23,7 @@
         <members>metadatadata</members>
         <members>metadatadeploy</members>
         <members>metadataretrieve</members>
+        <members>remotesitepage</members>
         <name>ApexPage</name>
     </types>
     <types>
